--- a/design.html
+++ b/design.html
@@ -15,7 +15,7 @@
 </ul>
 <h1 class="head">design</h1>
 <h1>typography</h1>
-<p>you may not realise but typography is very important in an app. if users see a hard to read font, they might never come to your website again. the vibra design aPI comes with over 90 fonts included. here is an example:</p>
+<p>you may not realise but typography is very important in an app. if users see a hard to read font, they might never come to your website again. vibra uI comes with over 90 fonts included. here is an example:</p>
 <p>a good font: vollkorn</p>
 <div class="article" style="padding: 50px; border: solid #ccc 1px; border-radius: 32px; font-family: Vollkorn">
 <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse at.</h1>
