--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
   <li><a href="https://github.com/shaurya1709/vibra-UI">github</a></li>	
 </ul>
 <h1>What is vibra uI</h1>
-<p>vibra uI is a uI framework built on pure cSS allowing developers to create beautiful webapps. vibra uI is licensed under the <a href="https://github.com/shaurya1709/vibra-UI/blob/main/LICENSE.md">vibra public use license</a></p>
+<p>vibra uI is a uI framework built on pure cSS allowing developers to create beautiful webapps. vibra uI is licensed under the <a href="https://github.com/shaurya1709/vibra-UI/blob/main/LICENSE.md">vibra public use license v1.0: dev edition</a></p>
 <h4>note: vibra uI is only supported on chromium based browsers.</h4>
 <h1>why vibra uI</h1>
 <p>now you might be wondering what makes vibra uI different? well, it is its structure. here are a few advantages of vibra uI:</p>
 <ul>
 	<li>as vibra uI is based on cSS, it loads faster than react, angular or vue</li>
-	<li>emojis are consistent across platforms.(some emojis have a day and night difference across platforms)</li>
+	<li>vibra uI requires minimal setup</li>
+	<li>vibra uI is quite small in file size</li>
+	<li>vibra uI is open source</li>
 </ul>
 <h1 id="req">Requirements</h1>
 <h2>Styles</h3>
