--- a/api.html
+++ b/api.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<title>Vibra UI</title>
+<title>Fluento</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="icon.svg">
-<h1 class="logo" onclick="window.location.href = 'index.html'">Vibra uI</h1>
+<h1 class="logo" onclick="window.location.href = 'index.html'">fluento</h1>
 <ul class="navbar sticky glow push">
   <li><a href="index.html">Home</a></li>
   <li><a id="active">API Documentation</a></li>
@@ -10,7 +10,7 @@
   <li><a href="demo.html">Demos</a></li>
   <li><a href="credits.html">credits</a></li>
   <li><a href="addons.html">addons</a></li>
-  <li><a href="https://github.com/shaurya1709/vibra-UI">github</a></li>
+  <li><a href="https://github.com/shaurya1709/fluento">github</a></li>
 </ul>
 
 <h1 class="head">aPI docs</h1>
@@ -45,7 +45,7 @@
 <h2>shadowed</h2>
 <p>adds a shadow to the element using the <span style="font-family: source code pro; font-size: 14px; text-transform: none;">box-shadow</span> property</p>
 <h2>icon-button</h2>
-<p>icon buttons allow icons inside a button. as listed in the design page, vibra uI uses the jam icon project.</p>
+<p>icon buttons allow icons inside a button. as listed in the design page,fluento uses the jam icon project.</p>
 <h3>syntax</h3>
 <pre class="code">रब ने बना दी जोड़ी</pre>
 <h1>class pairs</h1>
@@ -86,9 +86,9 @@
 <p>navbar + sticky = sticky navbar.<p>navbar + glow = navbar with glow in hovered links.<p>therefore, navbar + sticky + glow = the properties of sticky and the properties of glow added to the navbar</p>
 <a href="demo.html#ccp">example</a>
 <h1>animations</h1>
-<p>vibra uI includes multiple animations out-of-the-box for developers to use. just set up the properties with values like spin, fadeback etc.</p>
+<p>fluento includes multiple animations out-of-the-box for developers to use. just set up the properties with values like spin, fadeback etc.</p>
 <h2>Pre-Included Animations</h2>
-<p>vibra uI comes pre-included with the following animations:</p>
+<p>fluento comes pre-included with the following animations:</p>
 <ul>
 	<li>fadeback</li>
 	<li>spin</li>
