--- a/credits.html
+++ b/credits.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<title>Vibra UI</title>
+<title>Fluento</title>
 <link rel="icon" href="icon.svg">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<h1 class="logo" onclick="window.location.href = 'index.html'">Vibra uI</h1>
+<h1 class="logo" onclick="window.location.href = 'index.html'">fluento</h1>
 <ul class="navbar glow sticky push">
   <li><a href="index.html">Home</a></li>
   <li><a href="api.html">API Documentation</a></li>
@@ -10,7 +10,7 @@
   <li><a href="demo.html">Demos</a></li>
   <li><a id="active">credits</a></li>
   <li><a href="addons.html">addons</a></li>
-  <li><a href="https://github.com/shaurya1709/vibra-UI">github</a></li>	
+  <li><a href="https://github.com/shaurya1709/fluento">github</a></li>	
 </ul>
 <div>
 <img style="float: right; height: 500px; width: 500px; transform: rotate(-5deg); outline: solid #555 2px;" src="credits_pic.jpeg">
