--- a/demo.html
+++ b/demo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<title>Vibra UI</title>
-<h1 class="logo" onclick="window.location.href = 'index.html'">Vibra uI</h1>
+<title>Fluento</title>
+<h1 class="logo" onclick="window.location.href = 'index.html'">fluento</h1>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
 <link rel="icon" href="icon.svg">
@@ -11,7 +11,7 @@
   <li><a id="active">Demos</a></li>
   <li><a href="credits.html">credits</a></li>
   <li><a href="addons.html">addons</a></li>	
-  <li><a href="https://github.com/shaurya1709/vibra-UI">github</a></li>	
+  <li><a href="https://github.com/shaurya1709/fluento">github</a></li>	
 </ul>
 <h1 class="head">demos</h1>
 <h1>classes</h1>
@@ -126,7 +126,7 @@
 <p>noto color emoji supports all the latest emojis from android 12.</p>
 <h2>browser</h2>
 <p style="font-family: sans-serif">that joke was so funny 😂</p>
-<script src="stable.js"></script>
+<p contenteditable="true">Type some emojis here and try noto out</p>
 <style>
 	@import url(style.css);	
 </style>
