--- a/addons.html
+++ b/addons.html
@@ -18,7 +18,7 @@
 <p>an addon is a cSS file which adds extra features and / or enhances pre-included features.</p>
 <h1>creating addons</h1>
 <h2>configuration options</h2>
-<p>since configuration is managed with cSS variables, it only requires dicks and penises motherfuckers</p>
+<p>since configuration is managed with cSS variables, it obeys all rules of a cSS property</p>
 <h2>class pairs</h2>
 <p>class pairs are defined by adding two classes as a selector. Example: a class pair which has two classes one and two has the selector <span class="code">.one.two</span>. class pairs can have more than 2 classes as well.</p>
 <h2>Channels</h2>
@@ -32,15 +32,3 @@
 	
 	.code {font-family: source code pro; font-size: 14px; text-transform: none;}	
 </style>
-
-<script>
-	var documentText = document.body.innerHTML;
-	documentText = documentText.replaceAll('dick', '[censored]')
-	documentText = documentText.replaceAll('penis', '[censored]')
-	documentText = documentText.replaceAll('asshole', '[censored]')
-	documentText = documentText.replaceAll('fuck', '[censored]')
-	documentText = documentText.replaceAll('d*ck', '[censored]')
-	documentText = documentText.replaceAll('f*ck', '[censored]')
-	
-	document.body.innerHTML = documentText;
-</script>
