--- a/design.html
+++ b/design.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<title>Vibra UI</title>
+<title>Fluento</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
 <link rel="icon" href="icon.svg">
-<h1 class="logo" onclick="window.location.href = 'index.html'">Vibra uI</h1>
+<h1 class="logo" onclick="window.location.href = 'index.html'">fluento</h1>
 <ul class="navbar sticky glow push">
   <li><a href="index.html">Home</a></li>
   <li><a href="api.html">API Documentation</a></li>
@@ -11,11 +11,11 @@
   <li><a href="demo.html">Demos</a></li>
   <li><a href="credits.html">credits</a></li>
   <li><a href="addons.html">addons</a></li>
-  <li><a href="https://github.com/shaurya1709/vibra-UI">github</a></li>	
+  <li><a href="https://github.com/shaurya1709/fluento">github</a></li>	
 </ul>
 <h1 class="head">design</h1>
 <h1>typography</h1>
-<p>you may not realise but typography is very important in an app. if users see a hard to read font, they might never come to your website again. vibra uI comes with over 90 fonts included. here is an example:</p>
+<p>you may not realise but typography is very important in an app. if users see a hard to read font, they might never come to your website again.fluento comes with over 90 fonts included. here is an example:</p>
 <p>a good font: vollkorn</p>
 <div class="article" style="padding: 50px; border: solid #ccc 1px; border-radius: 32px; font-family: Vollkorn">
 <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse at.</h1>
@@ -50,12 +50,12 @@ Mauris hendrerit malesuada odio, id venenatis dui varius ac. Aliquam suscipit ma
 
 Donec pulvinar sem nec ipsum tempus, eget dapibus felis vehicula. Quisque commodo sagittis cursus. Curabitur felis augue, egestas dapibus condimentum eu, aliquet et</p></div>
 <h2>Gradients</h2>
-<p>vibra design strongly discourages use of gradients. they do look good at some places however, they are not the best for a uI. instead we recommend solid colors</p>
+<p>fluento strongly discourages use of gradients. they do look good at some places however, they are not the best for a uI. instead we recommend solid colors</p>
 <h1>Emoji</h2>
-<p>the vibra design api uses tweMoji as it is consistent with no compactibility issues and fits in well with the style of vibra design. there is no setup. just connect the scripts mentioned  in the <a href="index.html#req">requirements</a></p>
+<p>fluento uses noto color emoji as it is consistent with no compactibility issues and fits in well with the style offluento. there is no setup. just connect the scripts mentioned  in the <a href="index.html#req">requirements</a></p>
 <a href="demo.html#emoji">click here for example</a>
 <h1>icons</h1>
-<p>icons should be easy to grasp and understand. vibra uI uses icons by the jam icons project. <a href="https://jam-icons.com">click here to have a look</a>. <a href="https://github.com/michaelampr/jam">check out the github repository.</a> Example:</p>
+<p>icons should be easy to grasp and understand.fluento uses icons by the jam icons project. <a href="https://jam-icons.com">click here to have a look</a>. <a href="https://github.com/michaelampr/jam">check out the github repository.</a> Example:</p>
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="-5 -5 24 24" width="24" height="24" preserveAspectRatio="xMinYMin" class="icon__icon"><path d="M8 6.641l1.121-1.12a1 1 0 0 1 1.415 1.413L7.707 9.763a.997.997 0 0 1-1.414 0L3.464 6.934A1 1 0 1 1 4.88 5.52L6 6.641V1a1 1 0 1 1 2 0v5.641zM1 12h12a1 1 0 0 1 0 2H1a1 1 0 0 1 0-2z"></path>
 <p>this is the download icon</p>	
 <style>
