--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<title>Vibra UI</title>
+<title>Fluento</span></title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="icon.svg">
 <style>@import url(style.css);</style>
-<h1 class="logo" onclick="window.location.href = 'index.html'">Vibra uI</h1>
+<h1 class="logo">fluento</h1>
 <ul class="navbar glow sticky push">
   <li><a id="active">Home</a></li>
   <li><a href="api.html">API Documentation</a></li>
@@ -11,25 +11,25 @@
   <li><a href="demo.html">Demos</a></li>
   <li><a href="credits.html">credits</a></li>
   <li><a href="addons.html">addons</a></li>	
-  <li><a href="https://github.com/shaurya1709/vibra-UI">github</a></li>	
+  <li><a href="https://github.com/shaurya1709/fluento">github</a></li>	
 </ul>
-<h1>What is vibra uI</h1>
-<p>vibra uI is a uI framework built on pure cSS allowing developers to create beautiful webapps. vibra uI is licensed under the <a href="https://github.com/shaurya1709/vibra-UI/blob/main/LICENSE.md">vibra public use license v1.0: dev edition</a></p>
-<h4>note: vibra uI is only supported on chromium based browsers.</h4>
-<h1>why vibra uI</h1>
-<p>now you might be wondering what makes vibra uI different? well, it is its structure. here are a few advantages of vibra uI:</p>
+<h1>What is <span class="logo"><span class="logo">fluento</span></span></h1>
+<p><span class="logo">fluento</span> is a uI framework built on pure cSS allowing developers to create beautiful webapps. <span class="logo">fluento</span> is licensed under the <a href="https://github.com/shaurya1709/blob/main/LICENSE.md">vibra public use license v1.0: dev edition</a></p>
+<h4>note: <span class="logo">fluento</span> is only supported on chromium based browsers.</h4>
+<h1>why <span class="logo">fluento</span></h1>
+<p>now you might be wondering what makes <span class="logo">fluento</span> different? well, it is its structure. here are a few advantages of <span class="logo">fluento</span>:</p>
 <ul>
-	<li>as vibra uI is based on cSS, it loads faster than react, angular or vue</li>
-	<li>vibra uI requires minimal setup</li>
-	<li>vibra uI is quite small in file size</li>
-	<li>vibra uI is open source</li>
+	<li>as <span class="logo">fluento</span> is based on cSS, it loads faster than react, angular or vue</li>
+	<li><span class="logo">fluento</span> requires minimal setup</li>
+	<li><span class="logo">fluento</span> is quite small in file size</li>
+	<li><span class="logo">fluento</span> is open source</li>
 </ul>
 <h1 id="req">Requirements</h1>
 <h2>Styles</h3>
 <p>to import the minified version</p>
-<pre class="code">@import url(https://shaurya1709.github.io/vibra-UI/api.min.css)</pre>
+<pre class="code">@import url(https://shaurya1709.github.io/fluento/api.min.css)</pre>
 <p>to import the regular version</p>
-<pre class="code">@import url(https://shaurya1709.github.io/vibra-UI/api.css)</pre>
+<pre class="code">@import url(https://shaurya1709.github.io/fluento/api.css)</pre>
 <h2>configuration</h2>
 <pre class="code">
 &lt;style&gt;
